--- a/client/src/app/modules/accounting/components/accounting-balance-generale/accounting-balance-generale.component.html
+++ b/client/src/app/modules/accounting/components/accounting-balance-generale/accounting-balance-generale.component.html
@@ -16,6 +16,11 @@
           <select-accounting-account-class [(model)]="accountingBalanceSearch.accountingClass" label="Classe comptable"
             [form]="accountingBalanceForm" propertyName="accountingClass"></select-accounting-account-class>
         </td>
+        <td>
+          <select-accounting-journal [(model)]="accountingBalanceSearch.accountingJournal" label="Journal"
+            [form]="accountingBalanceForm" propertyName="accountingJournal">
+          </select-accounting-journal>
+        </td>
         <td class="toggle-td">
           <generic-toggle [(model)]="accountingBalanceSearch.isFromAs400" label="Depuis l'AS400 ?"
             [form]="accountingBalanceForm" propertyName="isFromAs400"></generic-toggle>
