update jss adress

--- a/src/main/resources/mails/templates/domiciliation-bilingual.html
+++ b/src/main/resources/mails/templates/domiciliation-bilingual.html
@@ -48,10 +48,10 @@
                         SOCIETES</strong></td>
             </tr>
             <tr>
-                <td style="text-align: center;padding-bottom: 15px;"><strong>Adresse de domiciliation : </strong>8 rue
-                    Saint Augustin – 75002 PARIS</td>
-                <td style="text-align: center;padding-bottom: 15px;"><strong>Business Address: </strong>8 rue
-                    Saint Augustin – 75002 PARIS</td>
+                <td style="text-align: center;padding-bottom: 15px;"><strong>Adresse de domiciliation : </strong>10
+                    boulevard Haussmann – 75009 PARIS</td>
+                <td style="text-align: center;padding-bottom: 15px;"><strong>Business Address: </strong>10 boulevard
+                    Haussmann – 75009 PARIS</td>
             </tr>
             <tr>
                 <td><strong>ENTRE LES SOUSSIGNÉS :</strong></td>
@@ -60,7 +60,7 @@
             <tr>
                 <td>La Société de Publications et de Publicité pour les Sociétés, Société par Actions Simplifiées au
                     capital de
-                    216 000 euros, dont le siège social est à Paris 2ème arrondissement, 8 rue Saint Augustin,
+                    216 000 euros, dont le siège social est à Paris 9ème arrondissement, 10 boulevard Haussmann,
                     immatriculée au
                     Registre du Commerce et des Sociétés de PARIS, sous le numéro 552 074 627, représentée par sa
                     Présidente
@@ -70,7 +70,7 @@
                 </td>
                 <td>La Société de Publications et de Publicité pour les Sociétés - Journal Spécial des Sociétés, a
                     Société par Actions Simplifiée with a capital of 216,000 euros, having its registered office located
-                    8 rue Saint Augustin in Paris 2nd arrondissement, registered with Paris Trade and Companies
+                    10 boulevard Haussmann in Paris 9th arrondissement, registered with Paris Trade and Companies
                     Register, under number 552 074 627, represented by its President, Myriam de Montis, and hereinafter
                     referred to as <strong>SPPS</strong>, whose number
                     agreement is n°<strong><span th:text="${jssDomiciliationAgreementNumber}"></span></strong> received
@@ -175,8 +175,8 @@
                 <td><span th:text="${activityDescriptionEnglish}"></span></td>
             </tr>
             <tr>
-                <td>à se domicilier dans ses locaux du <strong>8 rue Saint Augustin, 75002 PARIS</strong></td>
-                <td>to use its offices as its address: <strong>8 rue Saint Augustin, 75002 PARIS</strong></td>
+                <td>à se domicilier dans ses locaux du <strong>10 boulevard Haussmann, 75009 PARIS</strong></td>
+                <td>to use its offices as its address: <strong>10 boulevard Haussmann, 75009 PARIS</strong></td>
             </tr>
             <tr>
                 <td>pour l'accomplissement des formalités légales auprès de l'organisme compétent pour le régime
@@ -411,7 +411,7 @@
             <tr>
                 <td>
                     <ul>
-                        <li>Domiciliation commerciale dans les locaux sis : 8 rue Saint Augustin – 75002 PARIS</li>
+                        <li>Domiciliation commerciale dans les locaux sis : 10 boulevard Haussmann - 75009 PARIS</li>
                         <li>SPPS met à la disposition du Domicilié à titre onéreux des bureaux permettant une réunion
                             régulière des organes chargés de la direction, de l'administration ou de la surveillance de
                             l'entreprise et l'installation des services nécessaires à la tenue, conservation et la
@@ -434,7 +434,7 @@
                 </td>
                 <td>
                     <ul>
-                        <li>Business address service in the premises located : 8 rue Saint Augustin – 75002 PARIS</li>
+                        <li>Business address service in the premises located : 10 boulevard Haussmann - 75009 PARIS</li>
                         <li>SPPS provides the Client with offices for a fee to allow a regular meeting of the bodies
                             responsible for the management, administration or supervision of the company and the
                             implementation of the services necessary for the keeping, holding and reviewing of their
