--- a/src/main/resources/mails/templates/domiciliation-french.html
+++ b/src/main/resources/mails/templates/domiciliation-french.html
@@ -44,13 +44,13 @@
                     SOCIETES</strong></p>
         </div>
         <div style="padding-bottom: 15px;">
-            <p style="text-align: center;"><strong>Adresse de domiciliation : </strong>Adresse de domiciliation : 8 rue
-                Saint Augustin – 75002 PARIS
+            <p style="text-align: center;"><strong>Adresse de domiciliation : </strong>Adresse de domiciliation : 10
+                boulevard Haussmann – 75009 PARIS
             </p>
         </div>
         <p><strong>ENTRE LES SOUSSIGNÉS :</strong></p>
         <p>La Société de Publications et de Publicité pour les Sociétés, Société par Actions Simplifiées au capital de
-            216 000 euros, dont le siège social est à Paris 2ème arrondissement, 8 rue Saint Augustin, immatriculée au
+            216 000 euros, dont le siège social est à Paris 9ème arrondissement, 10 boulevard Haussmann, immatriculée au
             Registre du Commerce et des Sociétés de PARIS, sous le numéro 552 074 627, représentée par sa Présidente
             Myriam de Montis, et dénommée ci-après <strong>SPPS</strong>, dont le numéro d'agrément est le
             n°<strong><span th:text="${jssDomiciliationAgreementNumber}"></span></strong> obtenu le
@@ -89,7 +89,7 @@
                 <span th:text="${affaire.siren}"></span></strong></p>
         <p>Ayant pour activité :</p>
         <p><span th:text="${domiciliation.activityDescription}"></span></p>
-        <p>à se domicilier dans ses locaux du <strong>8 rue Saint Augustin, 75002 PARIS</strong></p>
+        <p>à se domicilier dans ses locaux du <strong>10 boulevard Haussmann, 75009 PARIS</strong></p>
         <p>pour l'accomplissement des formalités légales auprès de l'organisme compétent pour le régime juridique
             de l'entreprise à savoir au Centre de Formalités des Entreprises, au Registre de Commerce et des
             Sociétés, au Répertoire des Métiers ou à la Préfecture pour les associations, relatives à la création et au
@@ -164,7 +164,7 @@
         <p>En regard des sommes versées à la conclusion du contrat, la société SPPS s'engage à fournir les
             prestations suivantes :</p>
         <ul>
-            <li>Domiciliation commerciale dans les locaux sis : 8 rue Saint Augustin – 75002 PARIS</li>
+            <li>Domiciliation commerciale dans les locaux sis : 10 boulevard Haussmann – 75009 PARIS</li>
             <li>SPPS met à la disposition du Domicilié à titre onéreux des bureaux permettant une réunion
                 régulière des organes chargés de la direction, de l'administration ou de la surveillance de
                 l'entreprise et l'installation des services nécessaires à la tenue, conservation et la consultation de
