add constants and function to create new provision of type RBE if a liasse GUwith rbe attachment is added to the order and no provision of this type already exists

--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -126,6 +126,22 @@
           </tr>
           <tr>
             <td>
+              <select-type-document [(model)]="constant.documentTypeSynthesisRbeSigned"
+                label="Type de document - Synthèse RBE signé" [form]="constantForm"
+                propertyName="documentTypeSynthesisRbeSigned" [isMandatory]="true" [isDisabled]="!editMode">
+              </select-type-document>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <select-type-document [(model)]="constant.documentTypeSynthesisRbeUnsigned"
+                label="Type de document - Synthèse RBE non signé" [form]="constantForm"
+                propertyName="documentTypeSynthesisRbeUnsigned" [isMandatory]="true" [isDisabled]="!editMode">
+              </select-type-document>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <select-document-type [(model)]="constant.documentTypeBillingClosure"
                 label="Type de document - Relevés de compte" [form]="constantForm"
                 propertyName="documentTypeBillingClosure" [isMandatory]="true" [isDisabled]="!editMode">
@@ -1516,6 +1532,23 @@
                 [isDisabled]="!editMode"></select-provision-type></td>
           </tr>
           <tr>
+            <td><select-provision-type [(model)]="constant.provisionTypeRbe"
+                label="Type de prestation - Bénéficiaires Effectifs" [form]="constantForm"
+                propertyName="provisionTypeRbe" [isMandatory]="true" [isDisabled]="!editMode"></select-provision-type>
+            </td>
+          </tr>
+
+
+          <tr>
+          <tr>
+            <td>
+              <select-provision-family [(model)]="constant.provisionFamilyTypeDeposit"
+                label="Famille de service - Bénéficiaires Effectifs" [form]="constantForm"
+                propertyName="provisionFamilyTypeDeposit" [isMandatory]="true"
+                [isDisabled]="!editMode"></select-provision-family>
+            </td>
+          </tr>
+          <tr>
             <td>
               <generic-datepicker [(model)]="constant.dateAccountingClosureForAccountant"
                 label="Date - cloture comptable pour les comptables" [form]="constantForm"
@@ -1526,7 +1559,7 @@
           <tr>
             <td>
               <autocomplete-responsable [(model)]="constant.responsableDummyCustomerFrance" [form]="constantForm"
-                propertyName="responsableDummyCustomerFrance" [isMandatory]="true"
+                propertyName="responsableDummyCustomerFrance" [isMandatory]="false"
                 label="Responsable - Responsable utilisé pour le pricing non connecté MyJSS"
                 [isDisabled]="!editMode"></autocomplete-responsable>
             </td>
