increase size of text area "observations"

--- a/client/src/app/modules/administration/components/competent-authority/competent-authority.component.html
+++ b/client/src/app/modules/administration/components/competent-authority/competent-authority.component.html
@@ -185,7 +185,7 @@
                 <tr>
                   <td>
                     <generic-textarea [(model)]="selectedcompetentAuthority.observations" label="Observations"
-                      [form]="entityForm2" propertyName="observations" [isMandatory]="false"
+                      [form]="entityForm2" propertyName="observations" [isMandatory]="false" [numberOfLines]="10"
                       [isDisabled]="!editMode"></generic-textarea>
                   </td>
                 </tr>
