tiers category is now mandatory

--- a/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
+++ b/client/src/app/modules/tiers/components/responsable-main/responsable-main.component.html
@@ -62,7 +62,7 @@
                   </td>
                   <td>
                     <select-tiers-category [(model)]="selectedResponsable.tiersCategory" label="Catégorie"
-                      [form]="principalForm" propertyName="tiersCategory" [isDisabled]="!editMode">
+                      [form]="principalForm" propertyName="tiersCategory" [isDisabled]="!editMode" [isMandatory]="true">
                     </select-tiers-category>
                   </td>
                   <td>
