--- a/client/src/app/modules/accounting/components/accounting-record/accounting-record.component.html
+++ b/client/src/app/modules/accounting/components/accounting-record/accounting-record.component.html
@@ -122,7 +122,7 @@
   <mat-icon>add</mat-icon>
 </button>
 <button matTooltip="Télécharger un relevé de comptes" mat-fab color="accent" class="second-fab-button"
-  *ngIf="tiersToDisplay" (click)="downloadBillingClosureReceipt()">
+  *ngIf="tiersToDisplay || responsableToDisplay" (click)="downloadBillingClosureReceipt()">
   <mat-icon>download</mat-icon>
 </button>
 <button matTooltip="Lettrer les lignes sélectionnées" mat-fab color="accent" class="third-fab-button"
