save devs, change class ExportOsirisMail to pass outlook content into a InputStream directly in OsirisMailServiceImpl before calling addAttachment

--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -1535,7 +1535,7 @@
           <tr>
             <td>
               <autocomplete-responsable [(model)]="constant.responsableDummyCustomerFrance" [form]="constantForm"
-                propertyName="responsableDummyCustomerFrance" [isMandatory]="true"
+                propertyName="responsableDummyCustomerFrance" [isMandatory]="false"
                 label="Responsable - Responsable utilisé pour le pricing non connecté MyJSS"
                 [isDisabled]="!editMode"></autocomplete-responsable>
             </td>
