--- a/client/src/app/modules/quotation/components/select-attachment-type-dialog/missing-attachment-mail-dialog.component.html
+++ b/client/src/app/modules/quotation/components/select-attachment-type-dialog/missing-attachment-mail-dialog.component.html
@@ -88,29 +88,24 @@
   *ngIf="(!service || !service.assoServiceDocuments || service.assoServiceDocuments.length==0) && !selectedAssoServiceDocument">
   <p>Aucun type de document attendu sur ce service</p>
 </div>
-<div>
+<div *ngIf="editMode">
   <multiple-upload class="document-upload" [entity]="entity"
     [entityType]="MISSING_ATTACHMENT_QUERY_ENTITY_TYPE.entityType" [editMode]="true"
-    [forcedAttachmentType]="constantService.getAttachmentTypeAutomaticMail()"
-    (endOfUpload)="completeDocumentAttachment($event, missingAttachmentQuery)"
-    [isDirectUpload]="true"></multiple-upload>
-  <mat-card-content>
-    <div *ngIf="missingAttachmentQuery.attachments && missingAttachmentQuery.attachments.length>0">
-      <div *ngFor="let attachment of missingAttachmentQuery.attachments">
-        <ng-container *ngIf="!attachment.isDisabled">
-          <mat-icon color="accent" mat-list-icon (click)="deleteAttachment(attachment)" class="pointer"
-            matTooltip="Supprimer le fichier">delete_forever</mat-icon>
-          <mat-icon color="accent" mat-list-icon (click)="previewAttachment(attachment)"
-            matTooltip="Prévisualiser le fichier" class="pointer">visibility</mat-icon>
-          <mat-icon color="accent" mat-list-icon matTooltip="Télécharger le fichier"
-            (click)="downloadAttachment(attachment)" class="pointer">download</mat-icon> {{
-          attachment.uploadedFile.filename }}
-          {{attachment.uploadedFile.size ? ("("+formatBytes(attachment.uploadedFile.size,2)+")"):"" }}
-        </ng-container>
-      </div>
-    </div>
-  </mat-card-content>
+    [forcedAttachmentType]="constantService.getAttachmentTypeAutomaticMail()" [isForMissingAttachmentQuery]="true"
+    [isDirectUpload]="false"></multiple-upload>
 </div>
+<mat-card-content>
+  <div *ngIf="missingAttachmentQuery.attachments && missingAttachmentQuery.attachments.length>0">
+    <div *ngFor="let attachment of missingAttachmentQuery.attachments">
+      <ng-container *ngIf="!attachment.isDisabled">
+        <mat-icon *ngIf="editMode" color="accent" mat-list-icon (click)="deleteAttachment(attachment)" class="pointer"
+          matTooltip="Supprimer le fichier">delete_forever</mat-icon>
+        {{attachment.uploadedFile.filename }}
+        {{attachment.uploadedFile.size ? ("("+formatBytes(attachment.uploadedFile.size,2)+")"):"" }}
+      </ng-container>
+    </div>
+  </div>
+</mat-card-content>
 <div mat-dialog-actions align="end">
   <button mat-raised-button color="accent" (click)="closeDialog()" *ngIf="editMode">Annuler</button>
   <button mat-raised-button color="accent" (click)="closeDialog()" *ngIf="!editMode">Fermer</button>
