remove accounting pay journal, data from Sage files will be display in accounting record main sortTable, update compute code to generate all records in accounting generation service

--- a/client/src/app/modules/accounting/components/accounting-record/accounting-record.component.html
+++ b/client/src/app/modules/accounting/components/accounting-record/accounting-record.component.html
@@ -133,3 +133,7 @@
   *ngIf="tiersToDisplay" (click)="sendBillingClosureReceipt()">
   <mat-icon>outgoing_mail</mat-icon>
 </button>
+<button *ngIf="canImportPnmFile()" matTooltip="Importer un fichier PNM" mat-fab color="accent" class="fifth-fab-button"
+  (click)="importPnmFile()">
+  <mat-icon>upload</mat-icon>
+</button>
